--- a/projectsite/palaute/templates/palaute/login.html
+++ b/projectsite/palaute/templates/palaute/login.html
@@ -1,3 +1,8 @@
+<!-- Inherits HTML ja CSS from template index.html. Login.html is child template -->
+{% extends 'palaute/index.html' %}
+
+{% block content%}
+
 <h1>Sisäänkirjautuminen</h1>
 
 <form method="POST" action="">
@@ -8,8 +13,15 @@
     <input type="submit" name="Login">
 
 </form>
-
+<br>
+<span><a href="{% url 'palaute:register' %}">Rekisteröidy</a></span>
 
 {% for message in messages %}
     <p>{{message}}</p>
 {% endfor %}
+
+{% endblock%}
+
+
+
+
