--- a/projectsite/palaute/templates/palaute/login.html
+++ b/projectsite/palaute/templates/palaute/login.html
@@ -2,7 +2,7 @@
 {% extends 'palaute/index.html' %}
 
 {% block content%}
-
+{% endblock %}
 <h1>Sisäänkirjautuminen</h1>
 
 <form method="POST" action="">
