--- a/projectsite/palaute/templates/palaute/register.html
+++ b/projectsite/palaute/templates/palaute/register.html
@@ -2,6 +2,7 @@
 {% extends 'palaute/index.html' %}
 
 {% block content %}
+{% endblock %}
 <h1>Rekisteröityminen</h1>
 
 <form method="POST" action="">
