--- a/projectsite/palaute/templates/Styles.css
+++ b/projectsite/palaute/templates/Styles.css
@@ -1,10 +1,28 @@
-body {margin: 0;}
+body {
+  margin: 0;
+  color: grey;
+  text-align: left;
+  font-family: "Times New Roman", Times, serif;
+}
+
+h1 {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
 /*style for navbar*/
-
-
-body {margin: 0;}
-
-.topnav {
+ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -12,9 +30,9 @@ body {margin: 0;}
   background-color: #333;
 }
 
-li {float: left;}
+ul.topnav li {float: left;}
 
-li a {
+ul.topnav li a {
   display: block;
   color: white;
   text-align: center;
@@ -22,13 +40,13 @@ li a {
   text-decoration: none;
 }
 
-li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not(.active) {background-color: black;}
 
-li a.active {background-color: #483D8B}
+ul.topnav li a.active {background-color: grey;}
 
-li.right {float: right;}
+ul.topnav li.right {float: right;}
 
 @media screen and (max-width: 600px) {
-  li.right, 
-  li {float: none;}
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
 }
