--- a/projectsite/palaute/templates/palaute/index.html
+++ b/projectsite/palaute/templates/palaute/index.html
@@ -9,15 +9,15 @@
 
 <body>
 
-{% block topnav %}
+
 <ul class="topnav">
     <li><a class="active" href="index.html">Anna palautetta</a></li>
     <li><a href="login.html">Kirjaudu sisään</a></li>
     <li><a href="register.html">Rekisteröidy</a></li>
  </ul> 
- {% endblock %}  
+   
 
-     <!-- Yläpuolella oleva periytyy register.html ja login.html-->
+    {% block content %} <!-- Yläpuolella oleva periytyy register.html ja login.html-->
     
     <h1>Anna palautetta</h1>
     <span>Tervetuloa, {{request.user}} </span><br>
