--- a/projectsite/palaute/templates/palaute/index.html
+++ b/projectsite/palaute/templates/palaute/index.html
@@ -64,9 +64,10 @@ ul.topnav li.right {float: right;}
 
 
 <ul class="topnav">
-    <li><a class="active" href="index.html">Anna palautetta</a></li>
-    <li><a href="login.html">Kirjaudu sisään</a></li>
-    <li><a href="register.html">Rekisteröidy</a></li>
+    <!-- Linkit ovat nyt Djangon vaatimassa muodossa-->
+    <li><a class="active" href="{% url 'palaute:feedback' %}">Anna palautetta</a></li>
+    <li><a href="{% url 'palaute:login' %}">Kirjaudu sisään</a></li>
+    <li><a href="{% url 'palaute:register' %}">Rekisteröidy</a></li>
  </ul> 
    
 
