--- a/projectsite/palaute/templates/palaute/index.html
+++ b/projectsite/palaute/templates/palaute/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 <style>
 body {
-  margin: 0;
+  margin: 20px 20px 20px 50px;
   color: grey;
   text-align: left;
   font-family: "Times New Roman", Times, serif;
@@ -19,6 +19,7 @@ h1 {
 }
 
 .footer {
+  margin-top: 10px;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -66,8 +67,8 @@ ul.topnav li.right {float: right;}
 <ul class="topnav">
     <!-- Linkit ovat nyt Djangon vaatimassa muodossa-->
     <li><a class="active" href="{% url 'palaute:feedback' %}">Anna palautetta</a></li>
-    <li><a href="{% url 'palaute:login' %}">Kirjaudu sisään</a></li>
     <li><a href="{% url 'palaute:register' %}">Rekisteröidy</a></li>
+    <li><span><a href="{% url 'palaute:logout' %}">Kirjaudu ulos</a></span></li>
  </ul> 
    
 
