--- a/projectsite/palaute/templates/palaute/index.html
+++ b/projectsite/palaute/templates/palaute/index.html
@@ -5,31 +5,6 @@
     <title>{% block title %}Palaute{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
 <style>
-body {
-  margin: 20px 20px 20px 50px;
-  color: grey;
-  text-align: left;
-  font-family: "Times New Roman", Times, serif;
-}
-
-h1 {
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: left;
-}
-
-.footer {
-  margin-top: 10px;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: black;
-  color: white;
-  text-align: center;
-}
-
-/*style for navbar*/
 ul.topnav {
   list-style-type: none;
   margin: 0;
@@ -53,6 +28,32 @@ ul.topnav li a:hover:not(.active) {background-color: black;}
 ul.topnav li a.active {background-color: grey;}
 
 ul.topnav li.right {float: right;}
+
+body {
+  margin: 0px 10px 50px;
+  color: grey;
+  text-align: left;
+  font-family: "Times New Roman", Times, serif;
+}
+
+h1 {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+}
+
+.footer {
+  margin-top: 10px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+
 
 @media screen and (max-width: 600px) {
   ul.topnav li.right, 
